--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,28 +1,56 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.loginPositive()[pri:3, instance:clo.LoginPage@3c46e67a]">loginPositive</td> 
-  <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:23</td>   <td>12265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createNewAppointment()[pri:4, instance:clo.LoginPage@3c46e67a]">createNewAppointment</td> 
-  <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:30</td>   <td>19240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.createApptSameTime()[pri:5, instance:clo.LoginPage@3c46e67a]">createApptSameTime</td> 
-  <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:38</td>   <td>27561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.PasttimeAppointment()[pri:7, instance:clo.LoginPage@3c46e67a]">PasttimeAppointment</td> 
-  <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:42</td>   <td>31074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteAppointment()[pri:8, instance:clo.LoginPage@3c46e67a]">deleteAppointment</td> 
-  <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:43</td>   <td>32228</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.deleteSecondAppointment()[pri:9, instance:clo.LoginPage@3c46e67a]">deleteSecondAppointment</td> 
-  <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:45</td>   <td>34366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageSent()[pri:10, instance:clo.LoginPage@3c46e67a]">newMessageSent</td> 
-  <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:50</td>   <td>38969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.newMessageReply()[pri:11, instance:clo.LoginPage@3c46e67a]">newMessageReply</td> 
-  <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:54</td>   <td>42751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksReadyToPrint()[pri:12, instance:clo.LoginPage@3c46e67a]">checksReadyToPrint</td> 
-  <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/28 13:21:58</td>   <td>47597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.checksRegister()[pri:13, instance:clo.LoginPage@3c46e67a]">checksRegister</td> 
-  <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/28 13:22:05</td>   <td>54215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.voidCheck()[pri:14, instance:clo.LoginPage@3c46e67a]">voidCheck</td> 
-  <td>main@978508707</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/08/28 13:22:07</td>   <td>55988</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPage.teardown()[pri:0, instance:clo.LoginPage@3c46e67a]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@978508707</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:34:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DatabaseSettings.login()[pri:0, instance:clo.DatabaseSettings@c730b35]">&gt;&gt;login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:34:27</td>   <td>10319</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbAddCity()[pri:22, instance:clo.DatabaseSettings@c730b35]">dbAddCity</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:34:33</td>   <td>15635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbEditCity()[pri:23, instance:clo.DatabaseSettings@c730b35]">dbEditCity</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:34:35</td>   <td>17448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteCity()[pri:24, instance:clo.DatabaseSettings@c730b35]">dbDeleteCity</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:34:39</td>   <td>21767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddEmployer()[pri:25, instance:clo.DatabaseSettings@c730b35]">dbaddEmployer</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:34:43</td>   <td>25878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditEmployer()[pri:26, instance:clo.DatabaseSettings@c730b35]">dbeditEmployer</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:34:46</td>   <td>29077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteEmployer()[pri:27, instance:clo.DatabaseSettings@c730b35]">dbDeleteEmployer</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:34:49</td>   <td>31413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddCareProvider()[pri:28, instance:clo.DatabaseSettings@c730b35]">dbaddCareProvider</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:34:52</td>   <td>34661</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditCareProvider()[pri:29, instance:clo.DatabaseSettings@c730b35]">dbeditCareProvider</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:34:54</td>   <td>36967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteCareProvider()[pri:30, instance:clo.DatabaseSettings@c730b35]">dbDeleteCareProvider</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:34:56</td>   <td>39254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddReferrals()[pri:31, instance:clo.DatabaseSettings@c730b35]">dbaddReferrals</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:34:58</td>   <td>41096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditReferrals()[pri:32, instance:clo.DatabaseSettings@c730b35]">dbeditReferrals</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:35:00</td>   <td>42661</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteReferrals()[pri:33, instance:clo.DatabaseSettings@c730b35]">dbDeleteReferrals</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:35:02</td>   <td>45009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddDonee()[pri:34, instance:clo.DatabaseSettings@c730b35]">dbaddDonee</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:35:05</td>   <td>47753</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditDonee()[pri:35, instance:clo.DatabaseSettings@c730b35]">dbeditDonee</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:35:07</td>   <td>50256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteDonee()[pri:36, instance:clo.DatabaseSettings@c730b35]">dbDeleteDonee</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:35:10</td>   <td>52512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddBankRTN()[pri:37, instance:clo.DatabaseSettings@c730b35]">dbaddBankRTN</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:35:11</td>   <td>54251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditBankRTN()[pri:38, instance:clo.DatabaseSettings@c730b35]">dbeditBankRTN</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:35:13</td>   <td>55871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteBankRTN()[pri:39, instance:clo.DatabaseSettings@c730b35]">dbDeleteBankRTN</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:35:15</td>   <td>58168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddOccupations()[pri:40, instance:clo.DatabaseSettings@c730b35]">dbaddOccupations</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:35:17</td>   <td>59951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditOccupations()[pri:41, instance:clo.DatabaseSettings@c730b35]">dbeditOccupations</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:35:19</td>   <td>61621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteOccupations()[pri:42, instance:clo.DatabaseSettings@c730b35]">dbDeleteOccupations</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:35:21</td>   <td>63886</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddEducationalInstitute()[pri:43, instance:clo.DatabaseSettings@c730b35]">dbaddEducationalInstitute</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:35:24</td>   <td>66666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditEducationalInstitute()[pri:44, instance:clo.DatabaseSettings@c730b35]">dbeditEducationalInstitute</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:35:26</td>   <td>68533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteEducationalInstitute()[pri:45, instance:clo.DatabaseSettings@c730b35]">dbDeleteEducationalInstitute</td> 
+  <td>main@664792509</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/09/11 10:35:30</td>   <td>73162</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DatabaseSettings.teardown()[pri:0, instance:clo.DatabaseSettings@c730b35]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@664792509</td>   <td></td> </tr>
 </table>
