--- a/test-output/old/Suite2/classes.html
+++ b/test-output/old/Suite2/classes.html
@@ -69,11 +69,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>dbDeleteEmployer</td>
+<td>dbEditCity</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>dbEditCity</td>
+<td>dbDeleteEmployer</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -81,23 +81,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>dbaddReferrals</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>dbAddCity</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
-<td>dbaddReferrals</td>
-=======
-<<<<<<< HEAD
 <td>dbDeleteDonee</td>
-=======
-<td>dbAddCity</td>
->>>>>>> 49516e63287e6e4a93e39d9e11eb39dfe51fdec9
->>>>>>> d0287f84589562a0e8382db6a70aa98568174b94
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>dbaddReferrals</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -137,11 +129,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>dbaddBankRTN</td>
+<td>dbaddDonee</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>dbaddDonee</td>
+<td>dbaddBankRTN</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -161,11 +153,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>dbeditCareProvider</td>
+<td>dbaddEducationalInstitute</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>dbaddEducationalInstitute</td>
+<td>dbeditCareProvider</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -195,15 +187,35 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>checksRegister</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginPositive</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>checksReadyToPrint</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteMessage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>newMessageSent</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>PasttimeAppointment</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>createApptSameTime</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>updateAppointment</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>checksRegister</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -215,15 +227,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginPositive</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>deleteAppointment</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>checksReadyToPrint</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -232,14 +236,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>deleteSecondAppointment</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>newMessageSent</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>PasttimeAppointment</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
