--- a/reports/testExecutionReport.html
+++ b/reports/testExecutionReport.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2019-10-08 13:36:39</span>
+					<span class='suite-started-time'>2019-10-22 09:39:07</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 1m 13s+40ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 1m 5s+463ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 1m 13s+40ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 1m 5s+463ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2019-10-08 13:35:26</span> 
+							<span class='panel-lead suite-started-time'>2019-10-22 09:38:01</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2019-10-08 13:36:39</span> 
+							<span class='panel-lead suite-ended-time'>2019-10-22 09:39:07</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,7 +237,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='c9824594-394a-49ed-ba6e-4fe4246b2e90'>
+										<li class='collection-item test displayed active pass ' extentid='8349b54a-1320-40ea-9e87-10c62ab5be64'>
 											<div class='test-head'>
 												<span class='test-name'>Adding a New Tax Return </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -245,9 +245,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-10-08 13:35:26</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-10-08 13:36:39</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 1m 12s+735ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-10-22 09:38:01</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-10-22 09:39:06</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 1m 5s+185ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -264,128 +264,143 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:35:27</td>
+																	<td class='timestamp'>09:38:02</td>
 																	<td class='step-details'>Browser Maximized</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:35:44</td>
+																	<td class='timestamp'>09:38:18</td>
 																	<td class='step-details'>New city added</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:35:46</td>
+																	<td class='timestamp'>09:38:19</td>
 																	<td class='step-details'>City Edited Sucessfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:35:48</td>
+																	<td class='timestamp'>09:38:21</td>
 																	<td class='step-details'>City Deleted Successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:35:52</td>
+																	<td class='timestamp'>09:38:25</td>
 																	<td class='step-details'>New Employer added Successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:35:55</td>
+																	<td class='timestamp'>09:38:27</td>
 																	<td class='step-details'>New Employer Editted Successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:35:57</td>
+																	<td class='timestamp'>09:38:29</td>
 																	<td class='step-details'>Employer Deleted Successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:01</td>
+																	<td class='timestamp'>09:38:32</td>
 																	<td class='step-details'>New Care provider added successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:03</td>
+																	<td class='timestamp'>09:38:33</td>
 																	<td class='step-details'>Care provider editted successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:05</td>
+																	<td class='timestamp'>09:38:35</td>
 																	<td class='step-details'>Care Provider Deleted Successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:07</td>
+																	<td class='timestamp'>09:38:37</td>
 																	<td class='step-details'>Refferrals added successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:09</td>
+																	<td class='timestamp'>09:38:37</td>
 																	<td class='step-details'>Refferrals editted successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:11</td>
+																	<td class='timestamp'>09:38:39</td>
 																	<td class='step-details'>Referrals Deleted Successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:14</td>
+																	<td class='timestamp'>09:38:42</td>
 																	<td class='step-details'>Donee added successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:16</td>
+																	<td class='timestamp'>09:38:43</td>
 																	<td class='step-details'>Donee editted successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:19</td>
+																	<td class='timestamp'>09:38:45</td>
 																	<td class='step-details'>Donee Deleted Successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:20</td>
+																	<td class='timestamp'>09:38:47</td>
 																	<td class='step-details'>Bank RTN added successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:22</td>
+																	<td class='timestamp'>09:38:48</td>
 																	<td class='step-details'>Bank RTN editted successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:24</td>
+																	<td class='timestamp'>09:38:50</td>
 																	<td class='step-details'>Bank RTN Deleted Successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:26</td>
+																	<td class='timestamp'>09:38:52</td>
 																	<td class='step-details'>New Occupation added successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:28</td>
+																	<td class='timestamp'>09:38:52</td>
 																	<td class='step-details'>Occupation  editted successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:30</td>
+																	<td class='timestamp'>09:38:54</td>
 																	<td class='step-details'>Occupations Deleted Successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:33</td>
+																	<td class='timestamp'>09:38:57</td>
 																	<td class='step-details'>New Educational Institution  added  successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:34</td>
+																	<td class='timestamp'>09:38:58</td>
 																	<td class='step-details'>Educational Institution editted  successfully</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>13:36:37</td>
+																	<td class='timestamp'>09:38:59</td>
 																	<td class='step-details'>Educational Institute Deleted Successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>09:39:01</td>
+																	<td class='step-details'>User Status Codes added  successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>09:39:03</td>
+																	<td class='step-details'>User Status Codes editted  successfully</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>09:39:04</td>
+																	<td class='step-details'>User Status Code Deleted Successfully</td>
 																</tr>
 														</tbody>
 													</table>
