--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,56 +1,62 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:35:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbAddCity()[pri:22, instance:clo.DatabaseSettings@3c41ed1d]">dbAddCity</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbAddCity()[pri:22, instance:clo.DatabaseSettings@3c41ed1d]">dbAddCity</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:22</td>   <td>43286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteBankRTN()[pri:39, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteBankRTN</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:48</td>   <td>34371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteBankRTN()[pri:39, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteBankRTN</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:03</td>   <td>24290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteCareProvider()[pri:30, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteCareProvider</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:33</td>   <td>19330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteCareProvider()[pri:30, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteCareProvider</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:35:46</td>   <td>6983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteCity()[pri:24, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteCity</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:19</td>   <td>5284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteCity()[pri:24, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteCity</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:16</td>   <td>37687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteDonee()[pri:36, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteDonee</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:43</td>   <td>29173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteDonee()[pri:36, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteDonee</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:34</td>   <td>55769</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteEducationalInstitute()[pri:45, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteEducationalInstitute</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:58</td>   <td>43789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteEducationalInstitute()[pri:45, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteEducationalInstitute</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:35:55</td>   <td>16464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteEmployer()[pri:27, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteEmployer</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:27</td>   <td>13344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteEmployer()[pri:27, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteEmployer</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:28</td>   <td>48945</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteOccupations()[pri:42, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteOccupations</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:52</td>   <td>38347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteOccupations()[pri:42, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteOccupations</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:09</td>   <td>29990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteReferrals()[pri:33, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteReferrals</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:37</td>   <td>23221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteReferrals()[pri:33, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteReferrals</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:35:44</td>   <td>5130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbEditCity()[pri:23, instance:clo.DatabaseSettings@3c41ed1d]">dbEditCity</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:39:03</td>   <td>48751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbDeleteUserStatusCodes()[pri:48, instance:clo.DatabaseSettings@3c41ed1d]">dbDeleteUserStatusCodes</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:19</td>   <td>39965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddBankRTN()[pri:37, instance:clo.DatabaseSettings@3c41ed1d]">dbaddBankRTN</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:18</td>   <td>4276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbEditCity()[pri:23, instance:clo.DatabaseSettings@3c41ed1d]">dbEditCity</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:35:57</td>   <td>18799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddCareProvider()[pri:28, instance:clo.DatabaseSettings@3c41ed1d]">dbaddCareProvider</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:39:01</td>   <td>46998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbEdituserstatuscodes()[pri:47, instance:clo.DatabaseSettings@3c41ed1d]">dbEdituserstatuscodes</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:11</td>   <td>32344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddDonee()[pri:34, instance:clo.DatabaseSettings@3c41ed1d]">dbaddDonee</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:45</td>   <td>30459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddBankRTN()[pri:37, instance:clo.DatabaseSettings@3c41ed1d]">dbaddBankRTN</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:30</td>   <td>51199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddEducationalInstitute()[pri:43, instance:clo.DatabaseSettings@3c41ed1d]">dbaddEducationalInstitute</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:29</td>   <td>14730</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddCareProvider()[pri:28, instance:clo.DatabaseSettings@3c41ed1d]">dbaddCareProvider</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:35:48</td>   <td>9289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddEmployer()[pri:25, instance:clo.DatabaseSettings@3c41ed1d]">dbaddEmployer</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:39</td>   <td>24609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddDonee()[pri:34, instance:clo.DatabaseSettings@3c41ed1d]">dbaddDonee</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:24</td>   <td>45522</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddOccupations()[pri:40, instance:clo.DatabaseSettings@3c41ed1d]">dbaddOccupations</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:54</td>   <td>39678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddEducationalInstitute()[pri:43, instance:clo.DatabaseSettings@3c41ed1d]">dbaddEducationalInstitute</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:05</td>   <td>26574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddReferrals()[pri:31, instance:clo.DatabaseSettings@3c41ed1d]">dbaddReferrals</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:21</td>   <td>6634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddEmployer()[pri:25, instance:clo.DatabaseSettings@3c41ed1d]">dbaddEmployer</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:20</td>   <td>41688</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditBankRTN()[pri:38, instance:clo.DatabaseSettings@3c41ed1d]">dbeditBankRTN</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:50</td>   <td>35701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddOccupations()[pri:40, instance:clo.DatabaseSettings@3c41ed1d]">dbaddOccupations</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:01</td>   <td>21999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditCareProvider()[pri:29, instance:clo.DatabaseSettings@3c41ed1d]">dbeditCareProvider</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:35</td>   <td>20657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbaddReferrals()[pri:31, instance:clo.DatabaseSettings@3c41ed1d]">dbaddReferrals</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:14</td>   <td>35158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditDonee()[pri:35, instance:clo.DatabaseSettings@3c41ed1d]">dbeditDonee</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:59</td>   <td>45126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbadduserstatuscodes()[pri:46, instance:clo.DatabaseSettings@3c41ed1d]">dbadduserstatuscodes</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:33</td>   <td>53936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditEducationalInstitute()[pri:44, instance:clo.DatabaseSettings@3c41ed1d]">dbeditEducationalInstitute</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:47</td>   <td>32510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditBankRTN()[pri:38, instance:clo.DatabaseSettings@3c41ed1d]">dbeditBankRTN</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:35:52</td>   <td>13295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditEmployer()[pri:26, instance:clo.DatabaseSettings@3c41ed1d]">dbeditEmployer</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:32</td>   <td>18099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditCareProvider()[pri:29, instance:clo.DatabaseSettings@3c41ed1d]">dbeditCareProvider</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:26</td>   <td>47304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditOccupations()[pri:41, instance:clo.DatabaseSettings@3c41ed1d]">dbeditOccupations</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:42</td>   <td>27477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditDonee()[pri:35, instance:clo.DatabaseSettings@3c41ed1d]">dbeditDonee</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:07</td>   <td>28436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditReferrals()[pri:32, instance:clo.DatabaseSettings@3c41ed1d]">dbeditReferrals</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:57</td>   <td>42809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditEducationalInstitute()[pri:44, instance:clo.DatabaseSettings@3c41ed1d]">dbeditEducationalInstitute</td> 
   <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:35:23</td>   <td>-15255</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DatabaseSettings.login()[pri:0, instance:clo.DatabaseSettings@3c41ed1d]">&gt;&gt;login</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:25</td>   <td>10931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditEmployer()[pri:26, instance:clo.DatabaseSettings@3c41ed1d]">dbeditEmployer</td> 
+  <td>main@1630678941</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:52</td>   <td>37556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditOccupations()[pri:41, instance:clo.DatabaseSettings@3c41ed1d]">dbeditOccupations</td> 
+  <td>main@1630678941</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:38:37</td>   <td>22559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DatabaseSettings.dbeditReferrals()[pri:32, instance:clo.DatabaseSettings@3c41ed1d]">dbeditReferrals</td> 
+  <td>main@1630678941</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:37:58</td>   <td>-16452</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DatabaseSettings.login()[pri:0, instance:clo.DatabaseSettings@3c41ed1d]">&gt;&gt;login</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1630678941</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/10/08 13:36:39</td>   <td>60307</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DatabaseSettings.teardown()[pri:0, instance:clo.DatabaseSettings@3c41ed1d]">&lt;&lt;teardown</td> 
+<tr bgcolor="bd7b6a">  <td>19/10/22 09:39:04</td>   <td>50052</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DatabaseSettings.teardown()[pri:0, instance:clo.DatabaseSettings@3c41ed1d]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1630678941</td>   <td></td> </tr>
 </table>
